--- a/src/View/home.html.twig
+++ b/src/View/home.html.twig
@@ -1,14 +1,14 @@
-<!doctype html>
-<html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bonjour</title>
-    <link rel="icon" href="/assets/images/favicon.png">
-    <link rel="stylesheet" href="/assets/css/styles.css">
-</head>
+{% extends 'layout.html.twig' %}
+{% block title %}
+	{{ parent() }}
+	- Accueil
+{% endblock %}
 
-<body>
-    <h1>Hello {{ name }} !</h1>
-</body>
-</html>
+{% block content %}
+	{% block body %}
+		<h1>
+			coucou
+		</h1>
+		{% include '_navbar.html.twig' %}
+	{% endblock %}
+{% endblock %}
