--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -16,6 +16,6 @@
 	<body>
 
 		{% block content %}{% endblock %}
-		<footer>{% block footer %}{% endblock %}</footer>
+				{% include '_footer.html.twig' %}
 	</body>
 </html>
